--- a/index.html
+++ b/index.html
@@ -40,21 +40,14 @@
 <body>
     <div id="track" data-mouse-down-at="0" data-prev-percentage="0" data-prev-position="50">
 
-        <!-- <img class="image" src="/imagenes/0.jpg"    draggable="false"   >
-        <img class="image" src="/imagenes/1.jpg"    draggable="false"   >
-        <img class="image" src="/imagenes/12.jpg"   draggable="false"   >
-        <img class="image" src="/imagenes/13.jpg"   draggable="false"   >
-        <img class="image" src="/imagenes/15.jpg"   draggable="false"   >
-        <img class="image" src="/imagenes/18.jpg"   draggable="false"   >
-        <img class="image" src="/imagenes/6.jpg"    draggable="false"   > -->
-        <img class="image" src="/imagenes/1.avif" draggable="false"/>
-        <img class="image" src="/imagenes/2.avif" draggable="false"/>
-        <img class="image" src="/imagenes/3.avif" draggable="false"/>
-        <img class="image" src="/imagenes/4.avif" draggable="false"/>
-        <img class="image" src="/imagenes/5.avif" draggable="false"/>
-        <img class="image" src="/imagenes/6.avif" draggable="false"/>
-        <img class="image" src="/imagenes/7.avif" draggable="false"/>
-        <img class="image" src="/imagenes/8.avif" draggable="false"/>
+        <img class="image" src="imagenes/1.avif" draggable="false"/>
+        <img class="image" src="imagenes/2.avif" draggable="false"/>
+        <img class="image" src="imagenes/3.avif" draggable="false"/>
+        <img class="image" src="imagenes/4.avif" draggable="false"/>
+        <img class="image" src="imagenes/5.avif" draggable="false"/>
+        <img class="image" src="imagenes/6.avif" draggable="false"/>
+        <img class="image" src="imagenes/7.avif" draggable="false"/>
+        <img class="image" src="imagenes/8.avif" draggable="false"/>
     </div>
 
 </body>
