--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </style>
 
 <body>
-    <div id="track" data-mouse-down-at="0" data-prev-percentage="0" data-prev-position="50">
+    <div id="track" data-mouse-down-at="0" data-prev-percentage="0" data-prev-position="50" draggable="false">
 
         <img class="image" src="imagenes/1.avif" draggable="false"/>
         <img class="image" src="imagenes/2.avif" draggable="false"/>
