agregué promesa en el parallax

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 </style>
 
 <body>
-    <div id="track"  draggable="false" onDragStart="{(e) => e.preventDefault()}">
-        <img class="image" id="prueba" src="imagenes/1.avif" draggable="false" onDragStart="{(e) => e.preventDefault()}"/>
-        <img class="image" src="imagenes/2.avif" draggable="false" onDragStart="{(e) => e.preventDefault()}"/>
-        <img class="image" id="prueba3"src="imagenes/3.avif" draggable="false" onDragStart="{(e) => e.preventDefault()}"/>
-        <img class="image" src="imagenes/4.avif" draggable="false" onDragStart="{(e) => e.preventDefault()}"/>
-        <img class="image" src="imagenes/5.avif" draggable="false" onDragStart="{(e) => e.preventDefault()}"/>
-        <img class="image" src="imagenes/6.avif" draggable="false" onDragStart="{(e) => e.preventDefault()}"/>
-        <img class="image" src="imagenes/7.avif" draggable="false" onDragStart="{(e) => e.preventDefault()}"/>
-        <img class="image" src="imagenes/8.avif" draggable="false" onDragStart="{(e) => e.preventDefault()}"/>
+    <div id="track"  draggable="false" >
+        <img class="image" src="imagenes/1.avif" draggable="false" />
+        <img class="image" src="imagenes/2.avif" draggable="false" />
+        <img class="image" src="imagenes/3.avif" draggable="false" />
+        <img class="image" src="imagenes/4.avif" draggable="false" />
+        <img class="image" src="imagenes/5.avif" draggable="false" />
+        <img class="image" src="imagenes/6.avif" draggable="false" />
+        <img class="image" src="imagenes/7.avif" draggable="false" />
+        <img class="image" src="imagenes/8.avif" draggable="false" />
     </div>
 
 </body>
