--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         track.animate({
             transform: `translate(${nextPercentage}%, -50%)`
-        }, {duration: 1200, fill: "forwards"});
+        }, {duration: 1000, fill: "forwards"});
 
 
 /*
@@ -137,7 +137,9 @@
                 let posicion = Math.max(Math.min(posicionUnconstrained, 100), 0)
                 image.animate({objectPosition: `${posicion}% center`}, {duration: 1200, fill: "forwards"})
                                 }
-                window.requestAnimationFrame(animateImages)
+                requestAnimationFrame(animateImages)
+                /*window.requestAnimationFrame(animateImages)*/
+
                             }
     
     animateImages()
