--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <div id="track"  draggable="false" >
+    <div id="track"  draggable="false"  data-mouse-down-at="0" data-prev-percentage="0" >
         <img class="image" src="imagenes/1.avif" draggable="false" />
         <img class="image" src="imagenes/2.avif" draggable="false" />
         <img class="image" src="imagenes/3.avif" draggable="false" />
