--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <img class="image" src="imagenes/7.avif" draggable="false" />
         <img class="image" src="imagenes/8.avif" draggable="false" />
     </div>
+    <canvas id="canvas"></canvas>
     <audio style="display: none;" controls src="https://cdns-preview-f.dzcdn.net/stream/c-f7d7cc6a926783324d78bed8b2966f23-6.mp3"></audio>
 </body>
 <script src="script.js"></script>
