I think i fixed the jank

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SliderFachero</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,7 +20,6 @@
         <img class="image" src="imagenes/7.avif" draggable="false" />
         <img class="image" src="imagenes/8.avif" draggable="false" />
     </div>
-    <canvas id="canvas"></canvas>
     <audio style="display: none;" controls src="https://cdns-preview-f.dzcdn.net/stream/c-f7d7cc6a926783324d78bed8b2966f23-6.mp3"></audio>
 </body>
 <script src="script.js"></script>
