add link to other version

--- a/indexConLerp.html
+++ b/indexConLerp.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="/indexConLerp.html">Same but with linear interpolation</a>
+    <a href="/index.html">Same but without Linear interpolation</a>
     <div id="track"  draggable="false"  data-mouse-down-at="0" data-prev-percentage="0" >
         <img class="image" src="imagenes/1.avif" draggable="false" />
         <img class="image" src="imagenes/2.avif" draggable="false" />
@@ -20,5 +20,5 @@
         <img class="image" src="imagenes/8.avif" draggable="false" />
     </div>
 </body>
-<script src="script.js"></script>
+<script src="scriptConLerp.js"></script>
 </html>
