--- a/indexConLerp.html
+++ b/indexConLerp.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="/index.html">Same but without Linear interpolation</a>
-    <div id="track"  draggable="false"  data-mouse-down-at="0" data-prev-percentage="0" >
+    <a href="index.html">Same but without Linear interpolation</a>
+    <div id="track"  draggable="false">
         <img class="image" src="imagenes/1.avif" draggable="false" />
         <img class="image" src="imagenes/2.avif" draggable="false" />
         <img class="image" src="imagenes/3.avif" draggable="false" />
