--- a/indexConLerp.html
+++ b/indexConLerp.html
@@ -10,14 +10,19 @@
 <body>
     <a href="index.html">Same but without Linear interpolation</a>
     <div id="track"  draggable="false">
-        <img class="image" src="imagenes/1.avif" draggable="false" />
-        <img class="image" src="imagenes/2.avif" draggable="false" />
-        <img class="image" src="imagenes/3.avif" draggable="false" />
-        <img class="image" src="imagenes/4.avif" draggable="false" />
-        <img class="image" src="imagenes/5.avif" draggable="false" />
-        <img class="image" src="imagenes/6.avif" draggable="false" />
-        <img class="image" src="imagenes/7.avif" draggable="false" />
-        <img class="image" src="imagenes/8.avif" draggable="false" />
+        <img class="image" src="imagenes/8.jpg" draggable="false" />
+        <img class="image" src="imagenes/2.jpg" draggable="false" />
+        <img class="image" src="imagenes/3.jpg" draggable="false" />
+
+        <img class="image" src="imagenes/5.jpg" draggable="false" />
+        <img class="image" src="imagenes/4.jpg" draggable="false" />
+        <img class="image" src="imagenes/6.jpg" draggable="false" />
+        <img class="image" src="imagenes/9.jpg" draggable="false" />
+        <img class="image" src="imagenes/1.jpg" draggable="false" />
+
+
+        <img class="image" src="imagenes/10.jpg" draggable="false" />
+        <img class="image" src="imagenes/11.jpg" draggable="false" />
     </div>
 </body>
 <script src="scriptConLerp.js"></script>
