--- a/indexConLerp.html
+++ b/indexConLerp.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">Same but without Linear interpolation</a>
+    <a id="trish" href="https://www.instagram.com/alagatitos/">Photos: Camila / @alagatitos</a>
     <div id="track"  draggable="false">
         <img class="image" src="imagenes/8.jpg" draggable="false" />
         <img class="image" src="imagenes/2.jpg" draggable="false" />
